@@ -76,7 +76,7 @@ function squirrelmail_plugin_init_filters() {
         $squirrelmail_plugin_hooks['right_main_after_header']['filters'] = 'start_filters';
     }
     $squirrelmail_plugin_hooks['optpage_register_block']['filters'] = 'squirrelmail_plugin_optpage_register_block';
-    $squirrelmail_plugin_hooks['special_mailbox']['filters'] = 'filters_special_mailbox';
+#    $squirrelmail_plugin_hooks['special_mailbox']['filters'] = 'filters_special_mailbox';
 }
 
 function filters_special_mailbox( $mb ) {
