@@ -7,6 +7,8 @@ Version 1.2.6 -- CVS
   - Fixed resume draft bug #513521, #514639
   - Newmail plugin: admin can disablethe use of audio (patch #517698)
   - Fixed quoting problem in safe html (patch #516542)
+  - SPAM folder no longer special folder (filters plugin)
+  - Filtering now happens on folder list refresh (filters plugin)
 	
 Version 1.2.5 -- 22 February 2002
 ---------------------------------
